[package]
name = "slmtop-parsers"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
regex = "1.12.3"
slmtop-core = { path = "../slmtop-core" }

[dev-dependencies]
pretty_assertions = "1.4.1"

[lints]
workspace = true
