[package]
name = "slmtop-slurm-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
async-trait = "0.1.89"
shell-words = "1.1.1"
slmtop-core = { path = "../slmtop-core" }
slmtop-parsers = { path = "../slmtop-parsers" }
slmtop-slurm = { path = "../slmtop-slurm" }
thiserror = "2.0.18"
tokio = { version = "=1.48.0", features = ["io-util", "process", "time"] }

[lints]
workspace = true
