[package]
name = "slmtop-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
crossterm = "0.29.0"
ratatui = "0.30.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
shell-words = "1.1.1"
slmtop-core = { path = "../slmtop-core" }
slmtop-slurm = { path = "../slmtop-slurm" }
thiserror = "2.0.18"
time = { version = "0.3.47", features = ["local-offset"] }
tokio = { version = "=1.48.0", features = ["rt", "sync", "time"] }

[lints]
workspace = true
